# econ-cal-sync

./: README-EN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync.yml  test.yml
src/: __main__.py  models.py  sync.py
src/fetchers/: __init__.py  base.py  fmp.py  forexfactory.py
tests/: test_sync.py
